# MPC-Signer-Wallet

./: .env  Cargo.toml
src/: main.rs
src/chains/: ethereum.rs  features.rs  mod.rs
src/errors/: auth_errors.rs  mod.rs
src/models/: chain_model.rs  mod.rs  user_wallet_model.rs
src/routes/: auth.rs  chain.rs  mod.rs  transaction.rs
src/routes/handler/: auth_handler.rs  chain_handler.rs  mod.rs  response_handler.rs  transaction_handler.rs
src/services/: chains_services.rs  database.rs  key_services.rs  mod.rs
