[package]
name = "MPC-Signer-Wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.9.0"
secp256k1 = { version = "0.30.0", features = ["rand"] }
num-bigint = "0.4.6"
sss-rs = "0.12.0"

[dev-dependencies]
httpc-test = "0.1.10"