[package]
name = "MPC-Signer-Wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.9.0"
secp256k1 = { version = "0.30.0", features = ["rand"] }
num-bigint = "0.4.6"
sss-rs = "0.12.0"
futures = "0.3.28"
async-trait = "0.1.88"
rust-ipfs = "0.14.1"
aes = "0.8.4"
cipher = "0.4.4"
hex = "0.4.3"
ethers = "2.0.14"
bcrypt = "0.17.0"
wcookie = "0.1.3"
eyre = "0.6.12"

[dependencies.mongodb]
version = "3.2.3"

[dev-dependencies]
httpc-test = "0.1.10"